getInfoUsers service of Mailchimp
